--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
       type="module"
       src="/src/main.jsx"
     ></script>
+    <script src="https://www.youtube.com/iframe_api"></script>
   </body>
 </html>
