--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <title>Fashion And Apparel</title>
   </head>
-  <body>
+  <body className="dark dark:bg-[#07031d] duration-500">
     <div id="root"></div>
     <script
       type="module"
